# sklearn_nominal

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  benchmark_issue3.py  output.out  program.prof  pyproject.toml  todo.md
.github/actions/: setup.yml
.github/workflows/: deploy-gh-pages.yml  lint.yml  lint_test.yml  pipy_release.yml  pipy_uv.yml  python-app.yml  uv_lint.yml
benchmark/: benchmark_openml.py
benchmark/outputs/: IntelCorei3-4170CPU@3.70GHz_benchmark.md  openml_cc18.csv  openml_cc18_AMDRyzen51600Six-CoreProcessor_benchmark.md  openml_cc18_AMDRyzen51600Six-CoreProcessor_sklearn.tree.csv  openml_cc18_AMDRyzen51600Six-CoreProcessor_sklearnmodels.tree.csv  openml_cc18_IntelCorei3-4170CPU@3.70GHz.md  openml_cc18_IntelCorei3-4170CPU@3.70GHz_benchmark.md  openml_cc18_IntelCorei3-4170CPU@3.70GHz_sklearn.tree.csv  openml_cc18_IntelCorei3-4170CPU@3.70GHz_sklearnmodels.tree.csv
datasets/: trabajos_ej4_2024.csv  trabajos_ej4_2025_error.csv
doc/: api.rst  conf.py  index.rst
doc/auto_examples/: compare_classifiers.codeobj.json  compare_classifiers.rst  searchindex  train_tree.codeobj.json  train_tree_classifier.rst
docs/: .buildinfo  .buildinfo.bak  api.html  conf.py  genindex.html  index.html  index.rst  objects.inv  quick_start.html  quick_start.rst  search.html  searchindex.js  sg_execution_times.html  sg_execution_times.rst  user_guide.html
docs/.doctrees/: api.doctree  (+4 more)
examples/: Classification Models.ipynb  Classification Tree.ipynb  Regression Models.ipynb  Regression Tree.ipynb  plot_classifier.py
sklearn_nominal/: __init__.py
sklearnmodels/: __init__.py  scikit.py
tests/: test_dot.py  test_openml.py
(+273 files in other folders)
